# reqly

./: README.md
app/reqly/: package.json  pnpm-lock.yaml
app/reqly/src/: App.svelte
app/reqly/src-tauri/: Cargo.toml  tauri.conf.json
app/reqly/src-tauri/src/: main.rs
app/reqly/src/lib/: HttpRequest.svelte
lib/: Cargo.toml
lib/server_test/: run.py  socketio_script.py  tcp.py  udp.py  wss.py
lib/src/: http.rs  lib.rs  websocket.rs
