[package]
name = "reqly"
version = "0.0.0"
edition = "2021"
license = "AGPL-3.0"
description = "Simple, proper API testing and development"

[lib]
path = "src/lib.rs"

[dependencies]
curl = "0.4.46"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.115"
tungstenite = "0.21.0"
url = "2.5.0"
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = {version = "0.16", features = ["native-tls"]}
futures = "0.3"
log = "0.4.21"
env_logger = "0.11.3"
jsonwebtoken = "9.3.0"
socketio-rs = "0.1.8"